tried adding pom for jacoco plugin